samples/_failures_safe/1761269422_b3b491_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6aaf5187.c: In function ‘dfs’:
./samples/SAFE/__tmp_6aaf5187.c:201:11: error: expected ‘;’ at end of input
  201 |     printf
      |           ^
      |           ;
./samples/SAFE/__tmp_6aaf5187.c:201:5: error: expected declaration or statement at end of input
  201 |     printf
      |     ^~~~~~
